--- a/App/nomelollevo/Gemfile
+++ b/App/nomelollevo/Gemfile
@@ -28,3 +28,7 @@ gem 'sqlite3-ruby', :require => 'sqlite3'
 # group :development, :test do
 #   gem 'webrat'
 # end
+group :development, :test do
+  gem "wirble"
+  gem "ruby-debug19"
+end
