Working Facebook OAuth authentication #FTW!

--- a/App/nomelollevo/Gemfile
+++ b/App/nomelollevo/Gemfile
@@ -2,7 +2,8 @@ source 'http://rubygems.org'
 
 gem 'rails', '3.0.1'
 gem 'sqlite3-ruby', :require => 'sqlite3'
-
+gem 'oauth2'        # for authentication
+gem "rails_config"  # simple configuration of the app
 
 # We ar using jquery as the js framework
 gem 'jquery-rails'
@@ -16,5 +17,6 @@ gem 'jquery-rails'
 # end
 group :development, :test do
   gem "wirble"
+#  gem "ruby-debug"
   gem "ruby-debug19"
 end
