setting right facebook callback for heroku deployment

--- a/App/nomelollevo/config/settings.yml
+++ b/App/nomelollevo/config/settings.yml
@@ -3,5 +3,5 @@ authentication:
     site: "https://graph.facebook.com/oauth/authorize"
     app_id: 162983240406274
     app_secret: d6124a89c7b3c7de36b9914b664359dd
-    callback_url: "http://nomelollevo.com:3000/authentication/facebook/callback/"
+    callback_url: "http://nomelollevo.com/authentication/facebook/callback/"
     scope: "email"
